--- a/views/layout.pug
+++ b/views/layout.pug
@@ -26,7 +26,7 @@ html
           if (user !== undefined)
             if (user.admin == true)
               li.nav-item
-                a.nav-link(href='#') Admin
+                a.nav-link(href='/admin/info') Admin
           //form(role='search')
             input.form-control(type='search' placeholder='Search' aria-label='Search')
         if user === undefined
